# django-project-management

./: .gitignore  Dockerfile  Jenkinsfile  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: dev-cicd.yml  dev-deploy.yml  prod-deploy.yml
apps/application/dtos/: base.py
apps/application/leave_aprroval/: usecase.py
apps/application/project_creation/: usecase.py
apps/domain/approvals/: apps.py  models.py  service.py  tests.py
apps/domain/company/: admin.py  apps.py  models.py  tests.py
apps/domain/designs/: admin.py  apps.py  models.py  tests.py
apps/domain/enums/: departments.py
apps/domain/leaves/: apps.py  integration_tests.py  models.py  service.py  tests.py
apps/domain/meetings/: admin.py  apps.py  models.py  tests.py
apps/domain/notifications/: models.py  service.py  tests.py
apps/domain/projects/: admin.py  apps.py  models.py  tests.py
apps/domain/sales/: admin.py  apps.py  models.py  tests.py
apps/domain/tasks/: admin.py  apps.py  models.py  tests.py
apps/domain/users/: admin.py  apps.py  models.py  service.py  tests.py
apps/infrastructure/authentication/: backends.py  permissions.py  token_storage.py
apps/infrastructure/exceptions/: custom_handlers.py  exception_response.py  exceptions.py
apps/infrastructure/outbox/: admin.py  apps.py  models.py  services.py  tasks.py  tests.py
apps/infrastructure/repositories/: generic.py
apps/infrastructure/responses/: base.py  error.py  success.py  (+1 more)
config/settings/: base.py  local.py  prod.py
pms_v3/: asgi.py  celery.py  urls.py  wsgi.py
(+50 files in other folders)
